--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <META NAME="Author" CONTENT="">
   <META NAME="Keywords" CONTENT="">
   <META NAME="Description" CONTENT="">
-<link rel="icon" type="image/png" href="https://github.com/lebathang/traitim/blob/main/tohru.jfif">
+<link rel="icon" type="image/png" href="https://github.com/lebathang/traitim/blob/main/tohru.png">
   <link rel="stylesheet" href="style.css">
   <style>
   html, body {
